--- a/星巴克促销活动分析/星巴克促销活动分析.md
+++ b/星巴克促销活动分析/星巴克促销活动分析.md
@@ -1,11 +1,16 @@
-星巴克促销活动分析
+# 星巴克促销活动分析
 
-项目背景:分析星巴克活动期间不同营销活动类型对客户交易数据的影响，以确定不同客户群体的定位，优化活动效果及提高客户粘性，从而增加总体收入。
+- ## 项目背景:
+- 分析星巴克活动期间不同营销活动类型对客户交易数据的影响，以确定不同客户群体的定位，优化活动效果及提高客户粘性，从而增加总体收入。
 
-数据预处理:对数据集进行清洗，包括处理缺失值、异常值和拆分复杂列等。检查数据类型，包括时间列转换为DateTime、分类数据使用独热编码转化为数值型及提取新的特征列便于后续分析等。
+- ## 数据预处理:
+- 对数据集进行清洗，包括处理缺失值、异常值和拆分复杂列等。检查数据类型，包括时间列转换为DateTime、分类数据使用独热编码转化为数值型及提取新的特征列便于后续分析等。
 
-数据可视化:基于数据特征，进行EDA探索性分析。包括对客户特征、活动类型等进行单变量和双变量统计分析。绘制箱型图、直方图及核密度等分析特征的分布特征；绘制条形图和折线图探索分类变量遂时间的变化；绘制热力图分析变量间的相关性。
+- ## 数据可视化:
+- 基于数据特征，进行EDA探索性分析。包括对客户特征、活动类型等进行单变量和双变量统计分析。绘制箱型图、直方图及核密度等分析特征的分布特征；绘制条形图和折线图探索分类变量遂时间的变化；绘制热力图分析变量间的相关性。
 
-数据预测:利用min-max标准化顾客活动特征数据集，构建逻辑回归模型，并使用交叉验证评估模型性能。最终，模型能够通过商家的活动类型、推送途径及客户的性别、年龄、收入等信息，拥有近80%的准确率可预测该活动是否成功。
+- ## 数据预测:
+- 利用min-max标准化顾客活动特征数据集，构建逻辑回归模型，并使用交叉验证评估模型性能。最终，模型能够通过商家的活动类型、推送途径及客户的性别、年龄、收入等信息，拥有近80%的准确率可预测该活动是否成功。
 
-项目结果: 通过多方面分析活动数据，构建模型进行预测及提出优化建议。包括收入偏低的中年人活动参与度高，可重点推送；优惠活动不仅能带来短期消费的增加，也有助于客户形成消费习惯，可定期举行活动；最受欢迎的活动是买一送一，可提高其活动比例；当经费有限时，优先考虑social途径的活动推送等
+- ## 项目结果:
+- 通过多方面分析活动数据，构建模型进行预测及提出优化建议。包括收入偏低的中年人活动参与度高，可重点推送；优惠活动不仅能带来短期消费的增加，也有助于客户形成消费习惯，可定期举行活动；最受欢迎的活动是买一送一，可提高其活动比例；当经费有限时，优先考虑social途径的活动推送等
